# Klondike-cpp

./: CMakeLists.txt
src/: CMakeLists.txt  Card.cc  Card.h  Deck.cc  Foundation.cc  GameActionController.cc  GameConsoleView.cc  Klondike.cc  KlondikeClient.cc  KlondikeConsoleRenderer.cc  KlondikeMain.cc  KlondikeRenderer.cc  KlondikeTestMain.cc  Pile.cc  Stock.cc  StockAction.cc  StockController.cc  TableauPile.cc
src/actions/: CMakeLists.txt  Move.cc  MoveFromStock.cc  MoveFromTableauPile.cc  RedoGameAction.cc  StockAction.cc
src/actions/inc/: ForwardGameAction.h  ForwardGameActionVisitor.h  Move.h  MoveFromFoundation.h  MoveFromTableauPile.h  RedoGameAction.h  StockAction.h  UndoGameAction.h
src/app/: CMakeLists.txt  KlondikeApp.cc
src/app/inc/: KlondikeApp.h
src/cards/: AbstractDeckFactory.cc  CMakeLists.txt  Card.cc  Deck.cc  DeckFactory.cc  FrenchDeck.cc  Pile.cc  SpanishDeck.cc
src/cards/inc/: AbstractDeckFactory.h  Card.h  CardVisitor.h  Deck.h  DeckFactory.h  DeckTypes.h  FrenchDeck.h  Pile.h  SpanishDeck.h
src/cards/test_cards/: CMakeLists.txt  TestDeck.cc
src/cards/test_cards/inc/: TestDeck.h  TestDeckFactory.h
src/controllers/: BestScoresController.cc  CMakeLists.txt  DemoInProgressState.cc  GameActionController.cc  GameActionControllerCatalog.cc  GameActionHistoryController.cc  GameCompletedState.cc  GameInProgressState.cc  GamePausedState.cc  GameSessionStarter.cc  GameStatusController.cc  KlondikeAppStateContext.cc  LoadGameController.cc  Logic.cc  MoveCardController.cc  RandomGameActionController.cc  SaveGameController.cc  ScoreController.cc  StartController.cc  UndoGameAction.cc  UserGameActionController.cc
src/controllers/inc/: BestScoresController.h  Controller.h  ControllerVisitor.h  DemoInProgressState.h  ExitState.h  ForwardGameActionController.h  GameActionController.h  GameActionControllerCatalog.h  GameActionControllerHolder.h  GameActionControllerVisitor.h  GameActionHistoryController.h  GameCompletedState.h  GameInProgressState.h  GamePausedState.h  GameSessionStarter.h  GameStartedState.h  GameState.h  GameStatusController.h  KlondikeAppState.h  KlondikeAppStateContext.h  LoadGameController.h  Logic.h  MoveCardController.h  NoGameStartedState.h  RandomGameActionController.h  SaveGameController.h  ScoreController.h  StartController.h  State.h  StatesBuilder.h  UndoGameAction.h  UserGameActionController.h
src/controllers/local/: CMakeLists.txt  LocalStartController.cc
src/controllers/local/inc/: LocalStartController.h
src/controllers/remote/: CMakeLists.txt  RemoteStartController.cc
src/controllers/score/: CMakeLists.txt  GameActionScoreCalculator.cc  MoveScoreCalculator.cc
src/inc/: Card.h  CardConsoleRenderer.h  Controller.h  ControllerVisitor.h  Deck.h  Foundation.h  GameAction.h  GameActionController.h  GameConsoleView.h  Klondike.h  KlondikeConsoleRenderer.h  KlondikeRenderer.h  Pile.h  SelectActionView.h  Stock.h  StockAction.h  StockController.h  TableauPile.h
src/logic/: CMakeLists.txt  GameCompletedState.cc  GameInProgressState.cc  GamePausedState.cc  LoadingGameState.cc  Logic.cc  NoGameInProgressState.cc  SavingGameState.cc  StatesBuilder.cc
src/logic/inc/: AppState.h  AppStatesBuilder.h  ExitState.h  GameCompletedState.h  GameInProgressState.h  GamePausedState.h  LoadingGameState.h  Logic.h  NoGameInProgress.h  SavingGameState.h  State.h  StatesBuilder.h
src/logic/local/: CMakeLists.txt  LocalNoGameInProgressState.cc
src/logic/remote/: CMakeLists.txt  RemoteNoGameInProgressState.cc
src/model/: CMakeLists.txt  Foundation.cc  Klondike.cc  KlondikeRenderer.cc  Move.cc  MoveDest.cc  MoveFromFoundation.cc  MoveFromTableauPile.cc  MoveFromTableauPile.cc.orig  Stock.cc  StockAction.cc  TableauPile.cc  UndoGameAction.cc  UserSelectedMove.cc
src/model/implementation/: CMakeLists.txt  FoundationImpl.cc  KlondikeImpl.cc  MoveDestImpl.cc  StockImpl.cc  TableauPileImpl.cc
src/model/inc/: EventObserver.h  ForwardGameAction.h  ForwardGameActionObserver.h  Foundation.h  FoundationVisitor.h  GameAction.h  GameActionVisitor.h  GameElement.h  Klondike.h  KlondikeInitParameters.h  KlondikeRenderer.h  KlondikeVisitor.h  Move.h  MoveDest.h  MoveDestVisitor.h  MoveFromStock.h  MoveFromTableauPile.h  MoveFromTableauPile.h.orig  MoveOrigin.h  MoveOriginVisitor.h  MoveVisitor.h  Stock.h  StockAction.h  StockVisitor.h  TableauPile.h  TableauPileObserver.h  TableauPileVisitor.h  UndoGameAction.h  UserSelectedMove.h
src/model/proxy/: CMakeLists.txt  FoundationProxy.cc  GameElementProxy.cc  KlondikeProxy.cc  MoveDestProxy.cc  MoveOriginProxy.cc  StockProxy.cc  TableauPileProxy.cc
src/savers/: CMakeLists.txt  KlondikeSaver.h  KlondikeToFileSaver.cpp  KlondikeToFileSaver.h
src/savers/inc/: KlondikeToFileSaver.h
src/savers/to_file/: CMakeLists.txt  KlondikeToFileSaver.cc
src/savers_loaders/: CMakeLists.txt  KlondikeLoader.h
src/savers_loaders/to_from_file/: CMakeLists.txt  KlondikeFromFileLoader.cc  KlondikeToFileSaver.cc
src/serializers_deserializers/: CMakeLists.txt  KlondikeDeserializer.h  KlondikeSerializer.h  KlondikeSerializer.h.orig
src/serializers_deserializers/plain_text/: CMakeLists.txt  KlondikeDeserializedInitParameters.cc  KlondikePlainTextDeserializer.cc  KlondikePlainTextSerializer.cc
src/utils/: CMakeLists.txt  LimitedIntDialog.cc  MenuOption.cc  StringInputDialog.cc
src/utils/inc/: CancelledDialogException.h  ItemSelectionDialog.h  LimitedIntDialog.h  Menu.h  MenuOption.h  PressEnterToContinue.h  StringInputDialog.h  YesNoDialog.h
src/views/console/: BestScoresView.cc  CMakeLists.txt  CardConsoleRenderer.cc  ConsoleView.cc  FrenchCardRenderer.cc  GameConsoleView.cc  GameFinishedView.cc  GameView.cc  KlondikeConsoleRenderer.cc  LoadGameView.cc  MainMenuView.cc  MoveCardView.cc  SaveGameView.cc  SelectActionView.cc  SelectDeckView.cc  ShowActionView.cc  SpanishCardRenderer.cc  TestCardRenderer.cc
test/: ATest.cc  CMakeLists.txt  googletest.cmake  run_tests_for_target_macro.cmake  test_runner.cmake
test/ATest/: ATest.cc  CMakeLists.txt
test/BTest/: CMakeLists.txt
(+47 files in other folders)
